--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,13 @@
-body {
-    background-color: yellow;
+@use 'hero';
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+
+.container {
+    width: min(960px, 100% - 3rem);
+    margin-inline: auto;
 }
