--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,10 +1,16 @@
+@use 'var';
 @use 'hero';
+@use 'content';
+@use 'components/info';
+@use 'components/button';
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    color: white;
+    list-style: none;
 }
 
 .container {
